# General-Physics-Transformer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: compress.sh  readme.md
docs/: .eleventy.js  CLAUDE.md  index.html  index.md  package-lock.json  package.json  styles.css
docs/_includes/: layout.njk
docs/_site/: index.html
docs/assets/: gif-zoom.js
gphyt/data/: analyze_data.py  convert_comsol.ipynb  dataset.py  dataset_utils.py  normalize.py  phys_dataset.py  preprocess.py  preprocess_crop.py  well_dataset.py
gphyt/model/: deeponet.py  fno.py  model_specs.py  resnet.py  unet.py
gphyt/models/: fno.py  model_specs.py  model_utils.py  resnet.py  unet.py
gphyt/run/: model_eval.py  model_eval_fno.py  nextstep_prediction.py  rollout_eval.py  run_utils.py  train.py  train_fno.py  train_ref.py
gphyt/train/: eval.py  model_eval.py  run_training.py  train_base.py
gphyt/utils/: flops_measure.py  insp_checkpoints.ipynb  logger.py  rollout_video.py  train_vis.py  wandb_logger.py
lpfm/data/: analyze.ipynb  analyze_data.py  convert_comsol.ipynb  dataset_utils.py  ind_datasets.py  ingest_supersonic.ipynb  inspect.ipynb  normalize.ipynb  normalize.py  phys_dataset.py  preprocess.py  preprocess_crop.py  well_dataset.py
lpfm/model/: model_specs.py
lpfm/run/: config.yaml  dataset_sweep.py  lr_scheduler.py  model_eval.py  model_eval_fno.py  nextstep_prediction.py  parametric_sweep.py  rollout_eval.py  rollout_prediction.py  run_gpm.sh  run_lpfm.ps1  run_lpfm.sh  run_lpfm2.ps1  run_lpfm_rivanna.sh  run_utils.py  train.py  train_avit.py  train_fno.py  train_slrm.py  train_vqvae.py
lpfm/utils/: benchmarking.py  flops_measure.py  logger.py  rollout_video.py  train_vis.py  vis_datasets.ipynb  wandb_logger.py
metaparc/data/: analyze.ipynb  convert_comsol.ipynb  dataset_utils.py  datasets.py  ind_datasets.py  inspect.ipynb  mock_data.py  normalize.ipynb  phys_dataset.py  well_dataset.py
metaparc/model/: maml.py
metaparc/run/: config.yaml  config_avit.yaml  dataset_sweep.py  parametric_sweep.py  rollout_prediction.py  run_gpm.sh  train.py  train_avit.py  train_slrm.py
metaparc/utils/: inspect_model.ipynb  rollout_video.py  train_vis.py
tests/: conftest.py
tests/test_data/: test_dataset.py  test_dataset_utils.py  test_ind_datasets.py  test_phys_dataset.py  test_well_dataset.py
tests/test_model/: test_deeponet.py  test_fno.py  (+2 more)
(+163 files in other folders)
